# ORM-FastAPI

./: .gitignore  Makefile  README.md  app.py  conn.py  database.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  streamlit_web_app.py
app/: main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: books.py  setup.py
app/db/: session.py
app/db/models/: book.py
app/db/repositories/: book.py
backend/: crud.py  database.py  models.py  schemas.py  test.py
frontend/: Dockerfile  streamlit_web.py
src/: config.py
