[project]
name = "climbing-progress"
version = "1.0.0"
description = ""
authors = [{ name = "Artyom"}]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "streamlit>=1.41.1,<2",
    "pandas>=2.2.3,<3",
    "fastapi[standard]>=0.115.8",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.38",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
]
